# Aind.Behavior.VideoEncodingBenchmarks

./: .buildinfo  .gitignore  Aind.Behavior.VideoEncodingBenchmarks.sln  README.md  api.html  api.rig.html  api.session.html  api.task_logic.html  genindex.html  index.html  json-schemas.html  json-schemas.rig.html  json-schemas.session.html  json-schemas.task_logic.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  api.rig.doctree  api.session.doctree  api.task_logic.doctree  environment.pickle  index.doctree  json-schemas.doctree  json-schemas.rig.doctree  json-schemas.session.doctree  json-schemas.task_logic.doctree
_sources/: api.rig.rst.txt  api.task_logic.rst.txt  index.rst.txt  json-schemas.rig.rst.txt  json-schemas.session.rst.txt  json-schemas.task_logic.rst.txt
bonsai/: Bonsai.config
docs/: api.task_logic.rst  conf.py  index.rst  json-schemas.rig.rst
examples/: examples.py
scripts/: launcher.py  regenerate.py
src/: Extensions.csproj  main.bonsai  test_deserialization.bonsai
src/DataSchemas/: aind_video_encoding_benchmarks_rig.json  aind_video_encoding_benchmarks_task_logic.json
src/DataSchemas/aind_behavior_video_encoding_benchmarks/: launcher.py  regenerate.py  rig.py  task_logic.py
src/Extensions/: AindBehaviorSessionModel.cs  AindVideoEncodingBenchmarksRig.cs  AindVideoEncodingBenchmarksTaskLogic.cs  CameraQc.bonsai  HarpBehavior.bonsai  InstantitateTriggeredCameras.bonsai  TriggeredCamerasLogger.bonsai
tests/: test_bonsai.py  test_examples.py
