[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-behavior-video-encoding-benchmarks"
description = "A library for benchmarking online video acquisition/encoding pipelines"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
  "aind_behavior_services>=0.8, <0.9",
]

[project.optional-dependencies]

launcher = ["aind_behavior_experiment_launcher[aind-services]>=0.2.0"]

dev = ["aind_behavior_video_encoding_benchmarks[launcher]",
    "ruff",
    "codespell"
]


docs = [
    'Sphinx<7.3',
    'furo',
    'sphinx-jinja',
    'autodoc_pydantic[erdantic]',
    'myst_parser',
    'sphinx-jsonschema'
]

[project.scripts]
clabe = "aind_behavior_video_encoding_benchmarks.launcher:main"
regenerate = "aind_behavior_video_encoding_benchmarks.regenerate:main"

[tool.setuptools.packages.find]
where = ["src/DataSchemas"]

[tool.setuptools.dynamic]
version = {attr = "aind_behavior_video_encoding_benchmarks.__version__"}
readme = {file = ["README.md"]}

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg'
ignore-words-list = 'nd'
